--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="center">
     <a href="https://api.whatsapp.com/send?phone=2348166324559&text=tell%20me%20more%20about%20your%20school">
     <img src="./images/contact/images49.jpeg" alt="whatsapplogo" ></a>
-    <p>tap the image</p>
+    <p>tap image</p>
   </div>
 </div>
 
