--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Besty Schools</title>
+    <title> Brooklyn Schools</title>
     <meta name ="viewport" content="width=device-width, initial-scale=1" />
     <link href="/fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -23,7 +23,7 @@
  
 <section id="container">
     <img src="./images/background.jpg" alt="school">
-    <h1>Besty Group of Schools</h1>
+    <h1>Brooklyn Group of Schools</h1>
     <h6>Building On The Rock</h6>
  </section>
 
@@ -107,7 +107,6 @@
   <h2>Education is more powerful and beneficial when you are in the right 
     school of learning, We are currently offering admission into our school 
   </h2>
-  <button class="admit"><h2>Click here to find out more</h2></button>
 </section>
 
 <div id="teachers">
@@ -121,7 +120,7 @@
 <div id="contactt">
 
   <div class="center">
-    <a href="https://api.whatsapp.com/send?phone=2348166324559&text=tell%20me%20more%20about%20your%20school">
+    <a href="https://api.whatsapp.com/send?phone=2348103129471&text=tell%20me%20more%20about%20your%20school">
     <img src="./images/contact/images49.jpeg" alt="whatsapplogo" ></a>
     <p>tap image</p>
   </div>
